tests/snapshots/cli_json__snapshot_parts_clean_help.snap
---
source: tests/cli_json.rs
expression: normalize_help(&output.stdout)
---
Clean partial download groups

Usage: rgfile parts clean [OPTIONS] [DIR]

Arguments:
  [DIR]  Directory to scan (defaults to download.dir or current directory)

Options:
      --older-than <DAYS>  Only clean groups older than this many days
      --yes                Skip the interactive confirmation prompt
      --json               Print one JSON object
  -h, --help               Print help

Global Options:
  -v, --verbose...     Increase logging verbosity (-v for info, -vv for debug)
      --config <PATH>  Load configuration from a specific TOML file
      --no-config      Do not load a configuration file
      --history        Enable history for this run
      --no-history     Disable history for this run
