tests/snapshots/cli_json__snapshot_parts_help.snap
---
source: tests/cli_json.rs
expression: normalize_help(&output.stdout)
---
List or clean leftover partial downloads

Usage: rgfile parts [OPTIONS] <COMMAND>

Commands:
  list   List partial download groups
  clean  Clean partial download groups
  help   Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global Options:
  -v, --verbose...     Increase logging verbosity (-v for info, -vv for debug)
      --config <PATH>  Load configuration from a specific TOML file
      --no-config      Do not load a configuration file
      --history        Enable history for this run
      --no-history     Disable history for this run
